--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
 {
-    "version": 2,
-    "builds": [
-      { 
-        "src": "app/main.py", 
-        "use": "@vercel/python" 
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app/main.py"
-      }
-    ]
-  }
-  
+  "version": 2,
+  "env": {
+    "PYTHONPATH": "app"
+  },
+  "builds": [{ "src": "app/main.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "app/main.py" }]
+}
